--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,10 +22,10 @@ jobs:
             --build-arg VITE_API_BASE_URL=${{ secrets.VITE_API_BASE_URL }} .
         shell: bash
 
-      - name: Docker login
+      - name: GCR login
         run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u akalanka47000 --password-stdin
         shell: bash
 
-      - name: Docker push
+      - name: GCR push
         run: docker push $TAG
         shell: bash
