--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
+    name: Build & Deploy to Firebase Hosting
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
